control-plane-operator/controllers/hostedcontrolplane/v2/assets/ignition-server/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ignition-server
spec:
  selector:
    matchLabels:
      app: ignition-server
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: ignition-server
    spec:
      containers:
      - args:
        - --cert-file
        - /var/run/secrets/ignition/serving-cert/tls.crt
        - --key-file
        - /var/run/secrets/ignition/serving-cert/tls.key
        - --feature-gate-manifest=/shared/99_feature-gate.yaml
        command:
        - /usr/bin/control-plane-operator
        - ignition-server
        image: controlplane-operator
        livenessProbe:
          failureThreshold: 6
          httpGet:
            path: /healthz
            port: 9090
            scheme: HTTPS
          initialDelaySeconds: 120
          periodSeconds: 60
          successThreshold: 1
          timeoutSeconds: 5
        name: ignition-server
        ports:
        - containerPort: 9090
          name: https
          protocol: TCP
        - containerPort: 8080
          name: metrics
          protocol: TCP
        readinessProbe:
          failureThreshold: 3
          httpGet:
            path: /healthz
            port: 9090
            scheme: HTTPS
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 5
        resources:
          requests:
            cpu: 10m
            memory: 40Mi
        volumeMounts:
        - mountPath: /var/run/secrets/ignition/serving-cert
          name: serving-cert
        - mountPath: /payloads
          name: payloads
        - mountPath: /usr/share/bootkube/manifests/bootstrap-manifests
          name: bootstrap-manifests
        - mountPath: /usr/share/bootkube/manifests/manifests
          name: manifests
        - mountPath: /shared
          name: shared
        - mountPath: /etc/pki/ca-trust/extracted/pem
          name: openshift-config-managed-trusted-ca-bundle
          readOnly: true
      serviceAccount: ignition-server
      serviceAccountName: ignition-server
      terminationGracePeriodSeconds: 10
      tolerations:
      - effect: NoSchedule
        key: hypershift.openshift.io/control-plane
        operator: Equal
        value: "true"
      - effect: NoSchedule
        key: hypershift.openshift.io/cluster
        operator: Equal
        value: e2e-clusters-rrtlr-create-cluster-7l7bh
      - effect: NoSchedule
        key: hypershift-e2e-test-toleration
        operator: Equal
        value: "true"
      volumes:
      - name: serving-cert
        secret:
          defaultMode: 416
          secretName: ignition-server
      - emptyDir: {}
        name: payloads
      - emptyDir: {}
        name: bootstrap-manifests
      - emptyDir: {}
        name: manifests
      - emptyDir: {}
        name: shared
      - configMap:
          defaultMode: 420
          items:
          - key: ca-bundle.crt
            path: tls-ca-bundle.pem
          name: openshift-config-managed-trusted-ca-bundle
          optional: true
        name: openshift-config-managed-trusted-ca-bundle
