control-plane-operator/controllers/hostedcontrolplane/v2/assets/ignition-server/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ignition-server
  labels:
    app: ignition-server
spec:
  ports:
  - name: https
    port: 443
    protocol: TCP
    targetPort: 9090
  selector:
    app: ignition-server
  type: ClusterIP
