control-plane-operator/controllers/hostedcontrolplane/v2/assets/ignition-server/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: ignition-server
spec:
  host: ""
  tls:
    insecureEdgeTerminationPolicy: None
    termination: passthrough
  to:
    kind: Service
    name: ignition-server
  wildcardPolicy: None
